methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:4: error: value Yellow is not a member of object java.awt.Color
def makepattern() {{makeV(Color.Yellow); makeV(Color.Red); makeV(Color.Blue); makeV(Color.Green)}; for (stepper<-1 to 5) {forward()}}
                                ^MethodsPicture:4: error: value Red is not a member of object java.awt.Color
def makepattern() {{makeV(Color.Yellow); makeV(Color.Red); makeV(Color.Blue); makeV(Color.Green)}; for (stepper<-1 to 5) {forward()}}
                                                     ^MethodsPicture:4: error: value Blue is not a member of object java.awt.Color
def makepattern() {{makeV(Color.Yellow); makeV(Color.Red); makeV(Color.Blue); makeV(Color.Green)}; for (stepper<-1 to 5) {forward()}}
                                                                       ^MethodsPicture:4: error: value Green is not a member of object java.awt.Color
def makepattern() {{makeV(Color.Yellow); makeV(Color.Red); makeV(Color.Blue); makeV(Color.Green)}; for (stepper<-1 to 5) {forward()}}
                                                                                          ^