methods.picture.MethodsPicture.scala.code
override def run() {def makeV(c:Color)
                    {forward(); forward(); brushDown(); brushUp(); left(); forward(); right(); forward(); brushDown(); brushUp(); right(); forward(); left(); forward(); brushDown(); brushUp(); forward(); forward(); left()}
                    
def makepattern() {{makeV(Color.Yellow); makeV(Color.Red); makeV(Color.Blue); makeV(Color.Green)}; for (stepper<-1 to 5) {forward()}}

                    
for (stepper1<-1 to 3) {for (stepper2<-1 to 3) {makepattern()}; left(); for (stepper3<-1 to 5) {forward()}; right() }}